--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,16 +4,21 @@ version: 2.1
 # Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
-  node: circleci/node@4.7
-  docker: circleci/docker@1.7.0
+  docker: circleci/docker@2.0.1
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
+jobs:
+  example-job:
     docker:
-      jobs:
-        - docker/publish:
-            image: deploy_docker 
-            docker-password: DOCKER_PASSWORD 
-            docker-username: DOCKER_LOGIN 
-            dockerfile: Deploy-test 
+      # replace with your preferred image
+      - image: cimg/base:stable
+    steps:
+      - docker/check:
+          docker-password: DOCKER_PASSWORD 
+          docker-username: DOCKER_LOGIN 
+
+workflows:
+  example-workflow:
+    jobs:
+      - example-job
