--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ orbs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 jobs:
-  example-job:
+  test_docker_credentials:
     docker:
       # replace with your preferred image
       - image: cimg/base:stable
