--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ orbs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 jobs:
-  test_docker_credentials:
+  docker_test_credentials:
     docker:
       # replace with your preferred image
       - image: cimg/base:stable
@@ -19,6 +19,6 @@ jobs:
           docker-username: DOCKER_LOGIN 
 
 workflows:
-  test_docker_credentials:
+  docker_test_workflow:
     jobs:
-      - example-job
+      - docker_test_credentials
